--- a/.github/workflows/sync_dags.yaml
+++ b/.github/workflows/sync_dags.yaml
@@ -22,8 +22,7 @@ jobs:
     - id: 'auth'
       uses: 'google-github-actions/auth@v2'
       with:
-        project_id: ${{ secrets.GCP_SA_PROJECT_ID }}
-        service_account: ${{ secrets.GCP_SA_EMAIL }}
+        credentials_json: '${{ secrets.GCP_SA_KEY }}'
     - id: 'upload-files'
       uses: 'google-github-actions/upload-cloud-storage@v2'
       with:
