--- a/.github/workflows/sync_dags.yaml
+++ b/.github/workflows/sync_dags.yaml
@@ -22,7 +22,7 @@ jobs:
     - id: 'auth'
       uses: 'google-github-actions/auth@v2'
       with:
-        credentials_json: '${{ secrets.GCP_SA_KEY }}'
+        credentials_json: ${{ secrets.GCP_SA_KEY }}
     - id: 'upload-files'
       uses: 'google-github-actions/upload-cloud-storage@v2'
       with:
