--- a/.github/workflows/sync_dags.yaml
+++ b/.github/workflows/sync_dags.yaml
@@ -26,5 +26,5 @@ jobs:
     - id: 'upload-files'
       uses: 'google-github-actions/upload-cloud-storage@v2'
       with:
-        path: 'dags'
+        path: 'dags/*.py'
         destination: ${{ secrets.GCP_SA_BUCKET }}
