--- a/.github/workflows/sync_dags.yaml
+++ b/.github/workflows/sync_dags.yaml
@@ -19,6 +19,8 @@ jobs:
     steps:
     - id: 'checkout'
       uses: 'actions/checkout@v4'
+    - id: 'check filepath'
+      run: pwd
     - id: 'auth'
       uses: 'google-github-actions/auth@v2'
       with:
