--- a/.github/workflows/sync_dags.yaml
+++ b/.github/workflows/sync_dags.yaml
@@ -19,7 +19,7 @@ jobs:
     steps:
     - id: 'checkout'
       uses: 'actions/checkout@v4'
-    - id: 'check filepath'
+    - id: 'check_filepath'
       run: pwd
     - id: 'auth'
       uses: 'google-github-actions/auth@v2'
